# Waffle

./: .gitmodules  README.md
Waffle/: CMakeLists.txt
Waffle/Handlers/Exception/: Exceptions.h
Waffle/src/: Waffle.cpp  Waffle.h
Waffle/src/Components/: WaffleButton.cpp  WaffleButton.h  WaffleComponent.cpp  WaffleComponent.h  WaffleComponents.h
Waffle/src/Window/: WaffleWindow.cpp  WaffleWindow.h
config/: project.ini
scripts/: ProjectCmake.txt  WaffleCmake.txt  WaffleMainCmake.txt  main.cpp  setup.sh
